Recursive BSort, ISort - Striver A2Z

--- a/study/striver-A2Z/05-sorting.ipynb
+++ b/study/striver-A2Z/05-sorting.ipynb
@@ -5,10 +5,10 @@
    "id": "7d2510f0",
    "metadata": {
     "papermill": {
-     "duration": 0.01218,
-     "end_time": "2024-03-01T02:13:07.198717",
+     "duration": 0.007744,
+     "end_time": "2024-03-01T03:05:29.910147",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.186537",
+     "start_time": "2024-03-01T03:05:29.902403",
      "status": "completed"
     },
     "tags": []
@@ -23,17 +23,17 @@
    "id": "dc9caee0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.223852Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.222964Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.307042Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.306236Z"
+     "iopub.execute_input": "2024-03-01T03:05:29.929958Z",
+     "iopub.status.busy": "2024-03-01T03:05:29.928063Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.091915Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.090039Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.098136,
-     "end_time": "2024-03-01T02:13:07.308673",
+     "duration": 0.176709,
+     "end_time": "2024-03-01T03:05:30.094419",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.210537",
+     "start_time": "2024-03-01T03:05:29.917710",
      "status": "completed"
     },
     "tags": []
@@ -51,17 +51,17 @@
    "id": "6379e2eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.314896Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.314079Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.322820Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.322066Z"
+     "iopub.execute_input": "2024-03-01T03:05:30.104366Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.103029Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.115536Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.113927Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.013789,
-     "end_time": "2024-03-01T02:13:07.324732",
+     "duration": 0.020466,
+     "end_time": "2024-03-01T03:05:30.118268",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.310943",
+     "start_time": "2024-03-01T03:05:30.097802",
      "status": "completed"
     },
     "tags": []
@@ -100,17 +100,17 @@
    "id": "23fba2fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.334072Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.333801Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.341939Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.340974Z"
+     "iopub.execute_input": "2024-03-01T03:05:30.129525Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.127790Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.140308Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.138717Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.017383,
-     "end_time": "2024-03-01T02:13:07.346069",
+     "duration": 0.022076,
+     "end_time": "2024-03-01T03:05:30.143400",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.328686",
+     "start_time": "2024-03-01T03:05:30.121324",
      "status": "completed"
     },
     "tags": []
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "# Bubble Sort\n",
-    "def bubble_sort(arr: list[int]) -> list[int]:\n",
+    "def bubble_sort_1(arr: list[int]) -> list[int]:\n",
     "    \"\"\"\n",
     "    Avg, Best, Worst Time - O(N^2)\n",
     "\n",
@@ -144,7 +144,7 @@
     "# Testing the algorithm\n",
     "for _ in range(5):\n",
     "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
-    "    assert bubble_sort(arr) == sorted(arr)"
+    "    assert bubble_sort_1(arr) == sorted(arr)"
    ]
   },
   {
@@ -153,17 +153,17 @@
    "id": "736c4faf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.352140Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.351861Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.358569Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.357739Z"
+     "iopub.execute_input": "2024-03-01T03:05:30.152936Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.151738Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.162384Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.160831Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011307,
-     "end_time": "2024-03-01T02:13:07.360038",
+     "duration": 0.019234,
+     "end_time": "2024-03-01T03:05:30.165713",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.348731",
+     "start_time": "2024-03-01T03:05:30.146479",
      "status": "completed"
     },
     "tags": []
@@ -171,7 +171,7 @@
    "outputs": [],
    "source": [
     "# Insertion Sort\n",
-    "def insertion_sort(arr: list[int]) -> list[int]:\n",
+    "def insertion_sort_1(arr: list[int]) -> list[int]:\n",
     "    \"\"\"\n",
     "    Best Case - O(N) - Already sorted\n",
     "    Worst Case - O(N^2)\n",
@@ -192,7 +192,7 @@
     "# Testing the algorithm\n",
     "for _ in range(5):\n",
     "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
-    "    assert insertion_sort(arr) == sorted(arr)"
+    "    assert insertion_sort_1(arr) == sorted(arr)"
    ]
   },
   {
@@ -200,10 +200,10 @@
    "id": "bf92642e",
    "metadata": {
     "papermill": {
-     "duration": 0.00193,
-     "end_time": "2024-03-01T02:13:07.364027",
+     "duration": 0.00332,
+     "end_time": "2024-03-01T03:05:30.171941",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.362097",
+     "start_time": "2024-03-01T03:05:30.168621",
      "status": "completed"
     },
     "tags": []
@@ -218,17 +218,17 @@
    "id": "dca36744",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.369658Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.369440Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.376222Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.375347Z"
+     "iopub.execute_input": "2024-03-01T03:05:30.181778Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.180748Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.192546Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.190963Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011478,
-     "end_time": "2024-03-01T02:13:07.377714",
+     "duration": 0.020374,
+     "end_time": "2024-03-01T03:05:30.195667",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.366236",
+     "start_time": "2024-03-01T03:05:30.175293",
      "status": "completed"
     },
     "tags": []
@@ -277,10 +277,10 @@
    "id": "5d0a6f92",
    "metadata": {
     "papermill": {
-     "duration": 0.001936,
-     "end_time": "2024-03-01T02:13:07.381743",
+     "duration": 0.004051,
+     "end_time": "2024-03-01T03:05:30.202996",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.379807",
+     "start_time": "2024-03-01T03:05:30.198945",
      "status": "completed"
     },
     "tags": []
@@ -295,17 +295,17 @@
    "id": "db97aab6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.387580Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.387010Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.394859Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.394029Z"
+     "iopub.execute_input": "2024-03-01T03:05:30.212068Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.211178Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.222877Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.221281Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.012964,
-     "end_time": "2024-03-01T02:13:07.396797",
+     "duration": 0.019734,
+     "end_time": "2024-03-01T03:05:30.225769",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.383833",
+     "start_time": "2024-03-01T03:05:30.206035",
      "status": "completed"
     },
     "tags": []
@@ -343,16 +343,17 @@
    "id": "41c03989",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T02:13:07.406159Z",
-     "iopub.status.busy": "2024-03-01T02:13:07.405907Z",
-     "iopub.status.idle": "2024-03-01T02:13:07.413380Z",
-     "shell.execute_reply": "2024-03-01T02:13:07.412557Z"
+     "iopub.execute_input": "2024-03-01T03:05:30.234953Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.234002Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.245783Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.244156Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.014673,
-     "end_time": "2024-03-01T02:13:07.415368",
+     "duration": 0.019336,
+     "end_time": "2024-03-01T03:05:30.248146",
      "exception": false,
-     "start_time": "2024-03-01T02:13:07.400695",
+     "start_time": "2024-03-01T03:05:30.228810",
      "status": "completed"
     },
     "tags": []
@@ -397,6 +398,103 @@
     "    for i in range(len(arr) - 1):\n",
     "        assert arr[i] <= arr[i + 1]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05f27db5",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004264,
+     "end_time": "2024-03-01T03:05:30.255391",
+     "exception": false,
+     "start_time": "2024-03-01T03:05:30.251127",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "#### Let us try to solve the two extras on the website.\n",
+    "1. Recursive bubble sort\n",
+    "2. Recursive insertion sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "46792e3d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-01T03:05:30.264926Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.263920Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.275659Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.274068Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.019483,
+     "end_time": "2024-03-01T03:05:30.278515",
+     "exception": false,
+     "start_time": "2024-03-01T03:05:30.259032",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Recursive bubble sort\n",
+    "def bubble_sort_2(arr: list[int], end: int):\n",
+    "    if end == 0:\n",
+    "        return\n",
+    "    for i in range(end - 1):\n",
+    "        if arr[i] > arr[i + 1]:\n",
+    "            arr[i], arr[i + 1] = arr[i + 1], arr[i]\n",
+    "    bubble_sort_2(arr, end - 1)\n",
+    "\n",
+    "# Testing the algorithm\n",
+    "for _ in range(5):\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
+    "    bubble_sort_2(arr, len(arr))\n",
+    "    for i in range(len(arr) - 1):\n",
+    "        assert arr[i] <= arr[i + 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c854653d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-01T03:05:30.288546Z",
+     "iopub.status.busy": "2024-03-01T03:05:30.287619Z",
+     "iopub.status.idle": "2024-03-01T03:05:30.300015Z",
+     "shell.execute_reply": "2024-03-01T03:05:30.298452Z"
+    },
+    "papermill": {
+     "duration": 0.020865,
+     "end_time": "2024-03-01T03:05:30.302735",
+     "exception": false,
+     "start_time": "2024-03-01T03:05:30.281870",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Recursive insertion sort\n",
+    "def insertion_sort_2(arr: list[int], end: int):\n",
+    "    if end < len(arr):\n",
+    "        while end > 0 and arr[end - 1] > arr[end]:\n",
+    "            arr[end - 1], arr[end] = arr[end], arr[end - 1]\n",
+    "            end -= 1\n",
+    "        insertion_sort_2(arr, end + 1)\n",
+    "\n",
+    "# Testing the algorithm\n",
+    "for _ in range(5):\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
+    "    insertion_sort_2(arr, 0)\n",
+    "    for i in range(len(arr) - 1):\n",
+    "        assert arr[i] <= arr[i + 1]"
+   ]
   }
  ],
  "metadata": {
@@ -415,18 +513,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.93143,
-   "end_time": "2024-03-01T02:13:07.742471",
+   "duration": 7.172125,
+   "end_time": "2024-03-01T03:05:33.733335",
    "environment_variables": {},
    "exception": null,
    "input_path": "05-sorting.ipynb",
    "output_path": "05-sorting.ipynb",
    "parameters": {},
-   "start_time": "2024-03-01T02:13:05.811041",
+   "start_time": "2024-03-01T03:05:26.561210",
    "version": "2.4.0"
   }
  },
