Array basics - Striver A2Z - Part 1
Also contains easy daily question submission

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -318,6 +318,7 @@
      "iopub.status.idle": "2024-03-01T17:38:32.354123Z",
      "shell.execute_reply": "2024-03-01T17:38:32.353263Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009684,
      "end_time": "2024-03-01T17:38:32.355640",
@@ -341,6 +342,40 @@
     "# Testing the solution\n",
     "assert Solution().maximumOddBinaryNumber(\"010\") == \"001\"\n",
     "assert Solution().maximumOddBinaryNumber(\"0101\") == \"1001\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "978d44e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem Category: Easy\n",
+    "# Link: https://leetcode.com/problems/squares-of-a-sorted-array\n",
+    "class Solution:\n",
+    "    def sortedSquares(self, nums: list[int]) -> list[int]:\n",
+    "        N = len(nums)\n",
+    "        i, j = 0, N - 1\n",
+    "        sorted_by_magnitude: list[int] = []\n",
+    "        while i <= j:\n",
+    "            if abs(nums[i]) > abs(nums[j]):\n",
+    "                sorted_by_magnitude.append(nums[i])\n",
+    "                i += 1\n",
+    "            else:\n",
+    "                sorted_by_magnitude.append(nums[j])\n",
+    "                j -= 1\n",
+    "        sorted_by_magnitude.reverse()\n",
+    "\n",
+    "        result: list[int] = []\n",
+    "        for num in sorted_by_magnitude:\n",
+    "            result.append(num * num)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().sortedSquares([-4,-1,0,3,10]) == [0, 1, 9, 16, 100]\n",
+    "assert Solution().sortedSquares([-7,-4,-1,0,3,10]) == [0, 1, 9, 16, 49, 100]"
    ]
   }
  ],
