--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -6,16 +6,16 @@
    "id": "1c40ad22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T17:38:32.016069Z",
-     "iopub.status.busy": "2024-03-01T17:38:32.015373Z",
-     "iopub.status.idle": "2024-03-01T17:38:32.285579Z",
-     "shell.execute_reply": "2024-03-01T17:38:32.284094Z"
+     "iopub.execute_input": "2024-03-05T16:16:08.222462Z",
+     "iopub.status.busy": "2024-03-05T16:16:08.220301Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.231864Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.230105Z"
     },
     "papermill": {
-     "duration": 0.275378,
-     "end_time": "2024-03-01T17:38:32.287798",
+     "duration": 3.026686,
+     "end_time": "2024-03-05T16:16:11.234425",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.012420",
+     "start_time": "2024-03-05T16:16:08.207739",
      "status": "completed"
     },
     "tags": []
@@ -58,10 +58,10 @@
    "id": "4fb8e6c0",
    "metadata": {
     "papermill": {
-     "duration": 0.002007,
-     "end_time": "2024-03-01T17:38:32.291569",
+     "duration": 0.003211,
+     "end_time": "2024-03-05T16:16:11.241125",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.289562",
+     "start_time": "2024-03-05T16:16:11.237914",
      "status": "completed"
     },
     "tags": []
@@ -76,17 +76,17 @@
    "id": "5cff3cee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T17:38:32.296855Z",
-     "iopub.status.busy": "2024-03-01T17:38:32.296023Z",
-     "iopub.status.idle": "2024-03-01T17:38:32.303443Z",
-     "shell.execute_reply": "2024-03-01T17:38:32.302374Z"
+     "iopub.execute_input": "2024-03-05T16:16:11.250696Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.249748Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.262904Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.260896Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011979,
-     "end_time": "2024-03-01T17:38:32.304956",
+     "duration": 0.02122,
+     "end_time": "2024-03-05T16:16:11.265904",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.292977",
+     "start_time": "2024-03-05T16:16:11.244684",
      "status": "completed"
     },
     "tags": []
@@ -146,10 +146,10 @@
    "id": "3a05e040",
    "metadata": {
     "papermill": {
-     "duration": 0.002151,
-     "end_time": "2024-03-01T17:38:32.308921",
+     "duration": 0.002829,
+     "end_time": "2024-03-05T16:16:11.271357",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.306770",
+     "start_time": "2024-03-05T16:16:11.268528",
      "status": "completed"
     },
     "tags": []
@@ -164,17 +164,17 @@
    "id": "97e5cff8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T17:38:32.313459Z",
-     "iopub.status.busy": "2024-03-01T17:38:32.312656Z",
-     "iopub.status.idle": "2024-03-01T17:38:32.318305Z",
-     "shell.execute_reply": "2024-03-01T17:38:32.317444Z"
+     "iopub.execute_input": "2024-03-05T16:16:11.279691Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.278852Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.289472Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.287756Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009497,
-     "end_time": "2024-03-01T17:38:32.319660",
+     "duration": 0.018388,
+     "end_time": "2024-03-05T16:16:11.292509",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.310163",
+     "start_time": "2024-03-05T16:16:11.274121",
      "status": "completed"
     },
     "tags": []
@@ -218,17 +218,17 @@
    "id": "fa9ec8f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T17:38:32.324983Z",
-     "iopub.status.busy": "2024-03-01T17:38:32.324332Z",
-     "iopub.status.idle": "2024-03-01T17:38:32.330116Z",
-     "shell.execute_reply": "2024-03-01T17:38:32.329273Z"
+     "iopub.execute_input": "2024-03-05T16:16:11.302482Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.301679Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.311978Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.310332Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011558,
-     "end_time": "2024-03-01T17:38:32.332512",
+     "duration": 0.018153,
+     "end_time": "2024-03-05T16:16:11.314691",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.320954",
+     "start_time": "2024-03-05T16:16:11.296538",
      "status": "completed"
     },
     "tags": []
@@ -267,17 +267,17 @@
    "id": "c8266d81",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T17:38:32.338278Z",
-     "iopub.status.busy": "2024-03-01T17:38:32.337339Z",
-     "iopub.status.idle": "2024-03-01T17:38:32.343336Z",
-     "shell.execute_reply": "2024-03-01T17:38:32.342425Z"
+     "iopub.execute_input": "2024-03-05T16:16:11.323904Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.323059Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.332485Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.330856Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.01049,
-     "end_time": "2024-03-01T17:38:32.344704",
+     "duration": 0.017877,
+     "end_time": "2024-03-05T16:16:11.335282",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.334214",
+     "start_time": "2024-03-05T16:16:11.317405",
      "status": "completed"
     },
     "tags": []
@@ -313,17 +313,17 @@
    "id": "c16e336b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-01T17:38:32.349306Z",
-     "iopub.status.busy": "2024-03-01T17:38:32.348982Z",
-     "iopub.status.idle": "2024-03-01T17:38:32.354123Z",
-     "shell.execute_reply": "2024-03-01T17:38:32.353263Z"
+     "iopub.execute_input": "2024-03-05T16:16:11.346026Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.343743Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.354913Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.352938Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009684,
-     "end_time": "2024-03-01T17:38:32.355640",
+     "duration": 0.020073,
+     "end_time": "2024-03-05T16:16:11.358282",
      "exception": false,
-     "start_time": "2024-03-01T17:38:32.345956",
+     "start_time": "2024-03-05T16:16:11.338209",
      "status": "completed"
     },
     "tags": []
@@ -346,9 +346,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "978d44e4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-05T16:16:11.367362Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.366554Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.376909Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.374915Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.018937,
+     "end_time": "2024-03-05T16:16:11.380009",
+     "exception": false,
+     "start_time": "2024-03-05T16:16:11.361072",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Problem Category: Easy\n",
@@ -377,6 +393,55 @@
     "assert Solution().sortedSquares([-4,-1,0,3,10]) == [0, 1, 9, 16, 100]\n",
     "assert Solution().sortedSquares([-7,-4,-1,0,3,10]) == [0, 1, 9, 16, 49, 100]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "82dc674b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-05T16:16:11.389385Z",
+     "iopub.status.busy": "2024-03-05T16:16:11.388390Z",
+     "iopub.status.idle": "2024-03-05T16:16:11.398680Z",
+     "shell.execute_reply": "2024-03-05T16:16:11.397061Z"
+    },
+    "papermill": {
+     "duration": 0.018726,
+     "end_time": "2024-03-05T16:16:11.401350",
+     "exception": false,
+     "start_time": "2024-03-05T16:16:11.382624",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Problem Category: Medium\n",
+    "# Link: https://leetcode.com/problems/minimum-length-of-string-after-deleting-similar-ends/submissions/1194814297\n",
+    "class Solution:\n",
+    "    def minimumLength(self, s: str) -> int:\n",
+    "        N = len(s)\n",
+    "        i, j = 0, N - 1\n",
+    "        while i < j:\n",
+    "            while i < N - 1 and s[i + 1] == s[i] and s[i] == s[j]:\n",
+    "                i += 1\n",
+    "            while j > 1 and s[j - 1] == s[j] and s[i] == s[j]:\n",
+    "                j -= 1\n",
+    "            if s[i] == s[j]:\n",
+    "                i += 1\n",
+    "                j -= 1\n",
+    "            else:\n",
+    "                return (j - i) + 1\n",
+    "        else:\n",
+    "            return 1 if i == j else 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minimumLength(\"ca\") == 2\n",
+    "assert Solution().minimumLength(\"cabaabac\") == 0\n",
+    "assert Solution().minimumLength(\"aabccabba\") == 3\n",
+    "assert Solution().minimumLength(\"bbbbbabbbbccbcbcbccbbabbb\") == 1\n",
+    "assert Solution().minimumLength(\"aaaa\") == 0"
+   ]
   }
  ],
  "metadata": {
@@ -399,14 +464,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.326957,
-   "end_time": "2024-03-01T17:38:35.049360",
+   "duration": 6.99358,
+   "end_time": "2024-03-05T16:16:12.031821",
    "environment_variables": {},
    "exception": null,
-   "input_path": "001.ipynb",
-   "output_path": "001.ipynb",
+   "input_path": "practice/001.ipynb",
+   "output_path": "practice/001.ipynb",
    "parameters": {},
-   "start_time": "2024-03-01T17:38:29.722403",
+   "start_time": "2024-03-05T16:16:05.038241",
    "version": "2.4.0"
   }
  },
