Autoexecute notebook before view build
Docker-compose modified to install papermill
Sample changes made to practice folder view

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -405,6 +405,7 @@
      "iopub.status.idle": "2024-03-05T16:16:11.398680Z",
      "shell.execute_reply": "2024-03-05T16:16:11.397061Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018726,
      "end_time": "2024-03-05T16:16:11.401350",
@@ -441,6 +442,32 @@
     "assert Solution().minimumLength(\"aabccabba\") == 3\n",
     "assert Solution().minimumLength(\"bbbbbabbbbccbcbcbccbbabbb\") == 1\n",
     "assert Solution().minimumLength(\"aaaa\") == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9135cdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem Category: Easy\n",
+    "# Link: https://leetcode.com/problems/ransom-note/submissions/1195815128\n",
+    "class Solution:\n",
+    "    def canConstruct(self, ransomNote: str, magazine: str) -> bool:\n",
+    "        cr = collections.Counter(ransomNote)\n",
+    "        cm = collections.Counter(magazine)\n",
+    "        for i in range(ord(\"a\"), ord(\"z\") + 1):\n",
+    "            ch = chr(i)\n",
+    "            if cm.get(ch, 0) < cr.get(ch, 0):\n",
+    "                return False\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().canConstruct(\"aa\", \"aab\") == True\n",
+    "assert Solution().canConstruct(\"a\", \"b\") == False\n",
+    "assert Solution().canConstruct(\"aa\", \"ab\") == False"
    ]
   }
  ],
