Striver A2Z - Med Arrays P4

--- a/study/striver-A2Z/07-med-arrays.ipynb
+++ b/study/striver-A2Z/07-med-arrays.ipynb
@@ -813,6 +813,7 @@
      "iopub.status.idle": "2024-03-06T13:45:09.921256Z",
      "shell.execute_reply": "2024-03-06T13:45:09.920404Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013919,
      "end_time": "2024-03-06T13:45:09.922986",
@@ -852,6 +853,117 @@
     "        i += 1\n",
     "\n",
     "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "319b376d",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=JDOXKqF60RQ&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=27\n",
+    "Next Permutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19358d4f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute Force\n",
+    "def generate_perms(arr_: list[int]) -> list[list[int]]:\n",
+    "    # Time - O(N!), Space - O(N!)\n",
+    "    N = len(arr_)\n",
+    "    if N <= 1:\n",
+    "        return [arr_]\n",
+    "    else:\n",
+    "        result: list[list[int]] = []\n",
+    "        for i in range(N):\n",
+    "            for next_ in generate_perms(arr_[:i] + arr_[i+1:]):\n",
+    "                result.append([arr_[i]] + next_)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "arr: list[int] = [1, 2, 3]\n",
+    "arr1: list[list[int]] = sorted(generate_perms(arr))\n",
+    "i = arr1.index(arr)\n",
+    "arr1[i + 1] if i < len(arr1) - 1 else arr1[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d071df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Better\n",
+    "def next_perm(arr_: list[int]) -> list[int]:\n",
+    "\n",
+    "    def reverse_(start: int, end: int):\n",
+    "        while start < end:\n",
+    "            arr_[start], arr_[end] = arr_[end], arr_[start]\n",
+    "            start += 1\n",
+    "            end -= 1\n",
+    "\n",
+    "    N = len(arr_)\n",
+    "    max_ = arr_[N - 1]\n",
+    "    i = N - 2\n",
+    "    while i >= 0:\n",
+    "        if arr_[i] < max_:\n",
+    "            # Find minimum element inside slice that is greater than arr_[i]\n",
+    "            min_idx = i + 1\n",
+    "            for j in range(i + 1, N):\n",
+    "                if arr_[j] > arr_[i] and arr_[j] <= arr_[min_idx]:\n",
+    "                    min_idx = j\n",
+    "            arr_[i], arr_[min_idx] = arr_[min_idx], arr_[i]\n",
+    "            reverse_(i + 1, N - 1)\n",
+    "            return arr_\n",
+    "        else:\n",
+    "            max_ = arr_[i]\n",
+    "            i -= 1\n",
+    "    else:\n",
+    "        arr_.reverse()\n",
+    "        return arr_\n",
+    "\n",
+    "# Testing the solution\n",
+    "arr: list[int] = [2, 1, 5, 4, 3]\n",
+    "next_perm(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c61e4105",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/cHrH9CQ8pmY?si=Vl3mYSwTY727JgHV\n",
+    "Leaders of an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0416042b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time - O(N), Space - O(N)\n",
+    "arr = [10, 22, 12, 3, 0, 6]\n",
+    "\n",
+    "N = len(arr)\n",
+    "max_ = arr[N - 1]\n",
+    "arr1 = [max_]\n",
+    "i = N - 1\n",
+    "while i >= 0:\n",
+    "    if arr[i] > max_:\n",
+    "        arr1.append(arr[i])\n",
+    "        max_ = arr[i]\n",
+    "    i -= 1\n",
+    "\n",
+    "arr1"
    ]
   }
  ],
