--- a/study/striver-A2Z/07-med-arrays.ipynb
+++ b/study/striver-A2Z/07-med-arrays.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "# Neccessary imports\n",
     "import functools\n",
+    "import collections\n",
     "import math\n",
     "import random"
    ]
@@ -947,7 +948,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0416042b",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "# Time - O(N), Space - O(N)\n",
@@ -964,6 +967,55 @@
     "    i -= 1\n",
     "\n",
     "arr1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c084b1a7",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0621b858",
+   "metadata": {
+    "incorrectly_encoded_metadata": "https://www.youtube.com/watch?v=oO5uLE7EUlM&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=29",
+    "title": "Video Link:"
+   },
+   "outputs": [],
+   "source": [
+    "# Longest Common subsequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49f655a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestConsecutive(self, nums: list[int]) -> int:\n",
+    "        counter: dict[int, int] = {n: 1 for n in nums}\n",
+    "        for n in nums:\n",
+    "            if n in counter:\n",
+    "                count = counter[n]\n",
+    "                curr = n\n",
+    "                while curr + 1 in counter:\n",
+    "                    count += counter.pop(curr + 1)\n",
+    "                    curr += 1\n",
+    "                counter[n] = count\n",
+    "\n",
+    "        return max(counter.values()) if counter else 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().longestConsecutive([100,4,200,1,3,2]) == 4\n",
+    "assert Solution().longestConsecutive([0,3,7,2,5,8,4,6,0,1]) == 9\n",
+    "assert Solution().longestConsecutive([1,2,2,3]) == 3\n",
+    "assert Solution().longestConsecutive([1,1,1,1,2,2,2,3,3,3,3]) == 3"
    ]
   }
  ],
