--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -448,7 +448,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e9135cdc",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 3
+   },
    "outputs": [],
    "source": [
     "# Problem Category: Easy\n",
