--- a/study/striver-A2Z/07-med-arrays.ipynb
+++ b/study/striver-A2Z/07-med-arrays.ipynb
@@ -27,7 +27,8 @@
     "import functools\n",
     "import collections\n",
     "import math\n",
-    "import random"
+    "import random\n",
+    "import pdb"
    ]
   },
   {
@@ -1117,6 +1118,7 @@
      "iopub.status.idle": "2024-03-08T02:48:58.324908Z",
      "shell.execute_reply": "2024-03-08T02:48:58.324292Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.01865,
      "end_time": "2024-03-08T02:48:58.326555",
@@ -1147,6 +1149,184 @@
     "assert Solution().longestConsecutive([0,3,7,2,5,8,4,6,0,1]) == 9\n",
     "assert Solution().longestConsecutive([1,2,2,3]) == 3\n",
     "assert Solution().longestConsecutive([1,1,1,1,2,2,2,3,3,3,3]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de8b0b7b",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=N0MgLvceX7M&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=30\n",
+    "Set Matrix 0s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49680d8b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force - O((M * N)(M + N))\n",
+    "class Solution:\n",
+    "    def setZeroes(self, matrix: list[list[int]]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify matrix in-place instead.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        def BFS(i: int, j: int):\n",
+    "            for k in range(M):\n",
+    "                matrix[k][j] = 2\n",
+    "            for k in range(N):\n",
+    "                matrix[i][k] = 2\n",
+    "\n",
+    "        M, N = len(matrix), len(matrix[0])\n",
+    "        for i in range(M):\n",
+    "            for j in range(N):\n",
+    "                if matrix[i][j] == 0:\n",
+    "                    BFS(i, j)\n",
+    "\n",
+    "        for i in range(M):\n",
+    "            for j in range(N):\n",
+    "                if matrix[i][j] == 2:\n",
+    "                    matrix[i][j] = 0\n",
+    "\n",
+    "        print (matrix)\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = [[1,1,1],[1,0,1],[1,1,1]]\n",
+    "Solution().setZeroes(temp)\n",
+    "assert temp == [[1,0,1],[0,0,0],[1,0,1]]\n",
+    "\n",
+    "# Better solution\n",
+    "class Solution:\n",
+    "    def setZeroes(self, matrix: list[list[int]]) -> None:\n",
+    "        M, N = len(matrix), len(matrix[0])\n",
+    "\n",
+    "        row0 = 1\n",
+    "        for i in range(M):\n",
+    "            for j in range(N):\n",
+    "                if matrix[i][j] == 0:\n",
+    "                    if i == 0:\n",
+    "                        row0 = 0\n",
+    "                    else:\n",
+    "                        matrix[i][0] = 0\n",
+    "                    matrix[0][j] = 0\n",
+    "\n",
+    "        for i in range(1, M):\n",
+    "            for j in range(1, N):\n",
+    "                if matrix[0][j] == 0:\n",
+    "                    matrix[i][j] = 0\n",
+    "                if matrix[i][0] == 0:\n",
+    "                    matrix[i][j] = 0\n",
+    "\n",
+    "        if row0 == 0:\n",
+    "            for j in range(1, N):\n",
+    "                matrix[0][j] = 0\n",
+    "\n",
+    "        if matrix[0][0] == 0:\n",
+    "            for i in range(M):\n",
+    "                matrix[i][0] = 0\n",
+    "\n",
+    "        matrix[0][0] = 0 if row0 == 0 else matrix[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "for temp in (\n",
+    "    [[[1,1,1],[1,0,1],[1,1,1]], [[1,0,1],[0,0,0],[1,0,1]]],\n",
+    "    [[[0,1,2,0],[3,4,5,2],[1,3,1,5]], [[0,0,0,0],[0,4,5,0],[0,3,1,0]]],\n",
+    "    [[[-4,10,6,-7,0],[-8,6,-8,-6,0],[3,2,-9,-6,-10]], [[0,0,0,0,0],[0,0,0,0,0],[3,2,-9,-6,0]]]\n",
+    "):\n",
+    "    Solution().setZeroes(temp[0])\n",
+    "    assert temp[0] == temp[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb05528f",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=Z0R2u6gd3GU&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=31\n",
+    "Rotate image by 90 deg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "def229bc",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rotate(self, matrix: list[list[int]]) -> None:\n",
+    "        \"\"\"\n",
+    "        N = 4, i = 0\n",
+    "\n",
+    "        j = 0: (0, 0), (0, 3), (3, 3), (3, 0)\n",
+    "        j = 1: (0, 1), (1, 3), (3, 2), (2, 0)\n",
+    "        j = 2: (0, 2), (2, 3), (3, 1), (1, 0)\n",
+    "\n",
+    "        N = 4, i = 1\n",
+    "\n",
+    "        j = 1: (1, 1), (1, 2), (2, 2), (2, 1)\n",
+    "\n",
+    "        Generally put: (i, j), (j, N - i - 1), (N - i - 1, N - j - 1), (N - j - 1, i)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        N = len(matrix)\n",
+    "        for i in range(math.ceil(N / 2)):\n",
+    "            for j in range(i, N - 1 - i):\n",
+    "                i_, j_ = N - i - 1, N - j - 1\n",
+    "                matrix[i][j], matrix[j][i_], matrix[i_][j_], matrix[j_][i] = matrix[j_][i], matrix[i][j], matrix[j][i_], matrix[i_][j_]\n",
+    "\n",
+    "\n",
+    "# Testing the solution\n",
+    "for temp in (\n",
+    "    [[[1,2,3],[4,5,6],[7,8,9]], [[7,4,1],[8,5,2],[9,6,3]]],\n",
+    "    [[[5,1,9,11],[2,4,8,10],[13,3,6,7],[15,14,12,16]], [[15,13,2,5],[14,3,4,1],[12,6,8,9],[16,7,10,11]]]\n",
+    "):\n",
+    "    Solution().rotate(temp[0])\n",
+    "    assert temp[0] == temp[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c38a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution from striver\n",
+    "class Solution:\n",
+    "    def rotate(self, matrix: list[list[int]]) -> None:\n",
+    "        \"\"\"\n",
+    "        1. Transpose the matrix\n",
+    "        2. Reverse each row elements\n",
+    "        \"\"\"\n",
+    "\n",
+    "        N = len(matrix)\n",
+    "\n",
+    "        # Transpose the matrix\n",
+    "        for i in range(N):\n",
+    "            for j in range(i, N):\n",
+    "                matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]\n",
+    "\n",
+    "        # Reverse each row \n",
+    "        for i in range(N):\n",
+    "            for j in range(N // 2):\n",
+    "                matrix[i][j], matrix[i][N - j - 1] = matrix[i][N - j - 1], matrix[i][j]\n",
+    "\n",
+    "\n",
+    "# Testing the solution\n",
+    "for temp in (\n",
+    "    [[[1,2,3],[4,5,6],[7,8,9]], [[7,4,1],[8,5,2],[9,6,3]]],\n",
+    "    [[[5,1,9,11],[2,4,8,10],[13,3,6,7],[15,14,12,16]], [[15,13,2,5],[14,3,4,1],[12,6,8,9],[16,7,10,11]]]\n",
+    "):\n",
+    "    Solution().rotate(temp[0])\n",
+    "    assert temp[0] == temp[1]"
    ]
   }
  ],
