Striver A2Z - Med Arrays - P6

--- a/study/striver-A2Z/07-med-arrays.ipynb
+++ b/study/striver-A2Z/07-med-arrays.ipynb
@@ -1357,6 +1357,7 @@
      "iopub.status.idle": "2024-03-10T09:22:51.840703Z",
      "shell.execute_reply": "2024-03-10T09:22:51.839960Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020702,
      "end_time": "2024-03-10T09:22:51.842418",
@@ -1396,6 +1397,137 @@
     "):\n",
     "    Solution().rotate(temp[0])\n",
     "    assert temp[0] == temp[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b214952",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=3Zv-s9UUrFM&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=32\n",
+    "Spiral matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "670d322e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def spiralOrder(self, matrix: list[list[int | None]]) -> list[int | None]:\n",
+    "        M, N = len(matrix), len(matrix[0])\n",
+    "        i, j = 0, 0\n",
+    "        result: list[int | None] = []\n",
+    "        while i < M and j < N and matrix[i][j] != None:\n",
+    "            # Go right\n",
+    "            while j < N and matrix[i][j] != None:\n",
+    "                result.append(matrix[i][j])\n",
+    "                matrix[i][j] = None\n",
+    "                j += 1\n",
+    "\n",
+    "            # Go down\n",
+    "            i, j = i + 1, j - 1\n",
+    "            while i < M and matrix[i][j] != None:\n",
+    "                result.append(matrix[i][j])\n",
+    "                matrix[i][j] = None\n",
+    "                i += 1\n",
+    "\n",
+    "            # Go left\n",
+    "            i, j = i - 1, j - 1\n",
+    "            while j >= 0 and matrix[i][j] != None:\n",
+    "                result.append(matrix[i][j])\n",
+    "                matrix[i][j] = None\n",
+    "                j -= 1\n",
+    "\n",
+    "            # Go up\n",
+    "            i, j = i - 1, j + 1\n",
+    "            while i > 0 and matrix[i][j] != None:\n",
+    "                result.append(matrix[i][j])\n",
+    "                matrix[i][j] = None\n",
+    "                i -= 1\n",
+    "\n",
+    "            # For next iteration\n",
+    "            i, j = i + 1, j + 1\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().spiralOrder([[1, 2, 3], [4, 5, 6], [7, 8, 9]]) == [1, 2, 3, 6, 9, 8, 7, 4, 5]\n",
+    "assert Solution().spiralOrder([[1, 2, 3, 4]]) == [1, 2, 3, 4]\n",
+    "assert Solution().spiralOrder([[1], [2], [3], [4]]) == [1, 2, 3, 4]\n",
+    "assert Solution().spiralOrder([[1]]) == [1]\n",
+    "assert Solution().spiralOrder([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]) == [1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbecbabd",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=xvNwoz-ufXA&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=33\n",
+    "Count subarray sum equals k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7586edcb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force\n",
+    "class Solution:\n",
+    "    def subarraySum(self, nums: list[int], K: int) -> int:\n",
+    "        \"Time - O(N ^ 2)\"\n",
+    "        N = len(nums)\n",
+    "        count_ = 0\n",
+    "        for i in range(N):\n",
+    "            sum_ = 0\n",
+    "            for j in range(i, N):\n",
+    "               sum_ += nums[j]\n",
+    "               if sum_ == K:\n",
+    "                   print(nums[i: j + 1])\n",
+    "                   count_ += 1\n",
+    "\n",
+    "        return count_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().subarraySum([1, 2, 3, -3, 1, 1, 1, 4, 2, -3], 3) == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75940c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal\n",
+    "class Solution:\n",
+    "    def subarraySum(self, nums: list[int], K: int) -> int:\n",
+    "        \"\"\"\n",
+    "        Time - O(N), Space - O(N)\n",
+    "        Prefix Sum: For curr sum as sum_, how many prefix sum exists sum_ - k?\n",
+    "        \"\"\"\n",
+    "        hashmap: dict[int, int] = {0: 1}\n",
+    "        count = sum_ = 0\n",
+    "        for i in range(len(nums)):\n",
+    "            sum_ += nums[i]\n",
+    "            if sum_ - K in hashmap:\n",
+    "                count += hashmap[sum_ - K]\n",
+    "            hashmap[sum_] = hashmap.get(sum_, 0) + 1\n",
+    "        return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().subarraySum([1, 2, 3, -3, 1, 1, 1, 4, 2, -3], 3) == 8\n",
+    "assert Solution().subarraySum([1, 1, 1], 2) == 2\n",
+    "assert Solution().subarraySum([1, 2, 3], 3) == 2"
    ]
   }
  ],
