Striver A2Z - Pascal's Triangle

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -455,7 +455,7 @@
      "iopub.status.idle": "2024-03-10T09:22:49.081337Z",
      "shell.execute_reply": "2024-03-10T09:22:49.080612Z"
     },
-    "lines_to_next_cell": 3,
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011611,
      "end_time": "2024-03-10T09:22:49.083068",
@@ -484,6 +484,35 @@
     "assert Solution().canConstruct(\"aa\", \"aab\") == True\n",
     "assert Solution().canConstruct(\"a\", \"b\") == False\n",
     "assert Solution().canConstruct(\"aa\", \"ab\") == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9dad63e",
+   "metadata": {},
+   "source": [
+    "Striver: Pascal's triangle\n",
+    "Problem: Finding nCr in minimal time (part of pascal's triangle)\n",
+    "Find element at position 1st 2nd column in a pascal's triangle\n",
+    "Sol: math.comb(n -1, r - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afb5ce4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nCr(n: int, r: int) -> float:\n",
+    "    num = functools.reduce(lambda x, y: x * y, range(n, n - r, -1))\n",
+    "    den = functools.reduce(lambda x, y: x * y, range(r, 0, -1))\n",
+    "    return num / den\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in range(50):\n",
+    "    i, j = sorted([random.randint(1, 50), random.randint(1, 50)], reverse=True)\n",
+    "    assert math.comb(i, j) == nCr(i, j), f\"failed for {i, j}\""
    ]
   }
  ],
